--- a/Day24/soln_day24.ipynb
+++ b/Day24/soln_day24.ipynb
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -664,123 +664,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>banana</td>\n",
-       "      <td>UP</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>orange</td>\n",
        "      <td>UP</td>\n",
        "      <td>97</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>grape</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>orange</td>\n",
-       "      <td>nielit</td>\n",
-       "      <td>81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>grape</td>\n",
-       "      <td>UP</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>grape</td>\n",
-       "      <td>nielit</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>orange</td>\n",
-       "      <td>kattangal</td>\n",
-       "      <td>57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>orange</td>\n",
-       "      <td>KA</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>banana</td>\n",
-       "      <td>kattangal</td>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>grape</td>\n",
-       "      <td>kattangal</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>1</th>\n",
        "      <td>banana</td>\n",
        "      <td>nielit</td>\n",
        "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>banana</td>\n",
-       "      <td>KA</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>2</th>\n",
        "      <td>mango</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>84</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>mango</td>\n",
-       "      <td>UP</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>3</th>\n",
        "      <td>mango</td>\n",
        "      <td>KA</td>\n",
        "      <td>76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>orange</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>banana</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>4</th>\n",
        "      <td>mango</td>\n",
        "      <td>kattangal</td>\n",
        "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>5</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
        "      <td>grape</td>\n",
        "      <td>KA</td>\n",
        "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>9</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
        "      <td>mango</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>orange</td>\n",
        "      <td>nielit</td>\n",
-       "      <td>89</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>65</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -788,34 +788,35 @@
       ],
       "text/plain": [
        "      item      place  tot_s\n",
-       "0   banana         UP     50\n",
-       "1   orange         UP     97\n",
-       "2    grape         TN     73\n",
-       "3   orange     nielit     81\n",
-       "4    grape         UP     45\n",
-       "5    grape     nielit     24\n",
-       "6   orange  kattangal     57\n",
-       "7   orange         KA     70\n",
-       "8   banana  kattangal     65\n",
-       "9    grape  kattangal     43\n",
-       "10  banana     nielit     90\n",
-       "11  banana         KA     53\n",
-       "12   mango         TN     84\n",
-       "13   mango         UP     28\n",
-       "14   mango         KA     76\n",
-       "15  orange         TN     88\n",
-       "16  banana         TN     60\n",
-       "17   mango  kattangal     29\n",
-       "18   grape         KA     44\n",
-       "19   mango     nielit     89"
+       "0   orange         UP     97\n",
+       "1   banana     nielit     90\n",
+       "2    mango     nielit     89\n",
+       "3    mango         KA     76\n",
+       "4    mango  kattangal     29\n",
+       "5   banana         TN     60\n",
+       "6    grape     nielit     24\n",
+       "7   orange         TN     88\n",
+       "8    grape         KA     44\n",
+       "9   banana         KA     53\n",
+       "10  orange  kattangal     57\n",
+       "11   grape         TN     73\n",
+       "12   grape  kattangal     43\n",
+       "13  orange         KA     70\n",
+       "14   mango         TN     84\n",
+       "15  banana         UP     50\n",
+       "16   grape         UP     45\n",
+       "17  orange     nielit     81\n",
+       "18   mango         UP     28\n",
+       "19  banana  kattangal     65"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# shuffled dataframe \n",
     "index = [i for i in range(ddf.shape[0])]\n",
     "random.shuffle(index)\n",
     "s_ddf =  ddf.set_index([index]).sort_index()\n",
@@ -824,43 +825,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item</th>\n",
+       "      <th>place</th>\n",
+       "      <th>tot_s</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0      True\n",
-       "1     False\n",
-       "2     False\n",
-       "3     False\n",
-       "4      True\n",
-       "5     False\n",
-       "6     False\n",
-       "7     False\n",
-       "8     False\n",
-       "9     False\n",
-       "10    False\n",
-       "11    False\n",
-       "12    False\n",
-       "13    False\n",
-       "14    False\n",
-       "15    False\n",
-       "16     True\n",
-       "17    False\n",
-       "18     True\n",
-       "19     True\n",
-       "Name: item, dtype: bool"
+       "      item      place  tot_s\n",
+       "1   banana     nielit     90\n",
+       "5   banana         TN     60\n",
+       "9   banana         KA     53\n",
+       "15  banana         UP     50\n",
+       "19  banana  kattangal     65"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = ddf['item']=='banana'\n",
-    "t"
+    "pa = s_ddf[s_ddf['item'] == 'banana']\n",
+    "pa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def item_summary(item):\n",
+    "    part = s_ddf[s_ddf['item'] == item]\n",
+    "    t = part['tot_s'] \n",
+    "    rank = t.rank(ascending=False)\n",
+    "    #print rank\n",
+    "    part['rank'] = rank\n",
+    "    return part"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------MENU------\n",
+      "\t 1-Banana\n",
+      "\t 2-Mango\n",
+      "\t 3-Orange\n",
+      "\t 4-Grape\n",
+      "\t 0-EXIT1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      item      place  tot_s  rank\n",
+      "1   banana     nielit     90   1.0\n",
+      "5   banana         TN     60   3.0\n",
+      "9   banana         KA     53   4.0\n",
+      "15  banana         UP     50   5.0\n",
+      "19  banana  kattangal     65   2.0 \n",
+      "\n",
+      "------MENU------\n",
+      "\t 1-Banana\n",
+      "\t 2-Mango\n",
+      "\t 3-Orange\n",
+      "\t 4-Grape\n",
+      "\t 0-EXIT3\n",
+      "      item      place  tot_s  rank\n",
+      "0   orange         UP     97   1.0\n",
+      "7   orange         TN     88   2.0\n",
+      "10  orange  kattangal     57   5.0\n",
+      "13  orange         KA     70   4.0\n",
+      "17  orange     nielit     81   3.0 \n",
+      "\n",
+      "------MENU------\n",
+      "\t 1-Banana\n",
+      "\t 2-Mango\n",
+      "\t 3-Orange\n",
+      "\t 4-Grape\n",
+      "\t 0-EXIT0\n",
+      "EXITING....\n"
+     ]
+    }
+   ],
+   "source": [
+    "i =1\n",
+    "while(i != 0):\n",
+    "    i = input(\"------MENU------\\n\\t 1-Banana\\n\\t 2-Mango\\n\\t 3-Orange\\n\\t 4-Grape\\n\\t 0-EXIT\")\n",
+    "    if(i == 1):\n",
+    "        print item_summary('banana'),'\\n'\n",
+    "    elif(i == 2):\n",
+    "        print item_summary('mango') ,'\\n' \n",
+    "    elif(i == 3):\n",
+    "        print item_summary('orange'),'\\n'\n",
+    "    elif(i == 4):\n",
+    "        print item_summary('grape') ,'\\n'   \n",
+    "    elif(i == 0):\n",
+    "        print 'EXITING....'    "
    ]
   },
   {
