--- a/ML/assignments/Day13.ipynb
+++ b/ML/assignments/Day13.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
    "metadata": {},
    "source": [
     "### Input Image\n",
-    "<div style=\"float:left;width:300;\">\n",
+    "<div style=\"float:left;width:250;\">\n",
     "        <img src=\"man.jpg\" align=\"left\"  />\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,8 +59,8 @@
     "kernel = np.ones((2,2),np.uint8)\n",
     "erosion = cv.erode(m_inv,kernel,iterations=2)\n",
     "dial = cv.dilate(erosion,kernel,iterations=2)\n",
-    "res = np.bitwise_not(m_inv)\n",
-    "cv.imwrite('1res.jpg',res)\n",
+    "res = np.bitwise_not(dial)\n",
+    "cv.imwrite('res1.jpg',res)\n",
     "#cv.waitKey(0)"
    ]
   },
@@ -68,10 +68,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Output ( not -> erode -> dilate -> not)\n",
     "<div style=\"float:left;width:300;\">\n",
-    "        <img src=\"1res.jpg\" align=\"left\"  />\n",
+    "        <img src=\"res1.jpg\" align=\"left\"  />\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_inv = np.bitwise_not(m_img)\n",
+    "kernel = np.ones((2,2),np.uint8)\n",
+    "erosion = cv.erode(m_inv,kernel,iterations=2)\n",
+    "res = np.bitwise_not(erosion)\n",
+    "dial = cv.dilate(res,kernel,iterations=2)\n",
+    "\n",
+    "cv.imwrite('res2.jpg',dial)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output ( not -> erode -> not -> dilate)\n",
+    "<div style=\"float:left;width:300;\">\n",
+    "        <img src=\"res2.jpg\" align=\"left\"  />\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
