--- a/Day25/soln_day25.ipynb
+++ b/Day25/soln_day25.ipynb
@@ -160,139 +160,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ename</th>\n",
-       "      <th>eno</th>\n",
-       "      <th>edesig</th>\n",
-       "      <th>esalary</th>\n",
-       "      <th>ephno</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>K.Raj</td>\n",
-       "      <td>101</td>\n",
-       "      <td>scientist</td>\n",
-       "      <td>50000.0</td>\n",
-       "      <td>04932287278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Mohan Raj M.</td>\n",
-       "      <td>102</td>\n",
-       "      <td>engineer</td>\n",
-       "      <td>50000.0</td>\n",
-       "      <td>04962287278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>M.Ram</td>\n",
-       "      <td>104</td>\n",
-       "      <td>scientist</td>\n",
-       "      <td>80000.0</td>\n",
-       "      <td>04914287275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ram Kumar</td>\n",
-       "      <td>104</td>\n",
-       "      <td>scientist</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>04914287335</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Mohan Babu K.K.</td>\n",
-       "      <td>106</td>\n",
-       "      <td>officer</td>\n",
-       "      <td>50000.0</td>\n",
-       "      <td>04962387278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>K.Gopal</td>\n",
-       "      <td>107</td>\n",
-       "      <td>scientist</td>\n",
-       "      <td>50000.0</td>\n",
-       "      <td>04932287278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Anil Raj M.</td>\n",
-       "      <td>108</td>\n",
-       "      <td>engineer</td>\n",
-       "      <td>50000.0</td>\n",
-       "      <td>04962287278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Amala P.</td>\n",
-       "      <td>201</td>\n",
-       "      <td>scientist</td>\n",
-       "      <td>70000.0</td>\n",
-       "      <td>04989287275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Uma</td>\n",
-       "      <td>204</td>\n",
-       "      <td>officer</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>04914287335</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Suma</td>\n",
-       "      <td>206</td>\n",
-       "      <td>engineer</td>\n",
-       "      <td>50000.0</td>\n",
-       "      <td>04962387278</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             ename  eno     edesig  esalary        ephno\n",
-       "0            K.Raj  101  scientist  50000.0  04932287278\n",
-       "1     Mohan Raj M.  102   engineer  50000.0  04962287278\n",
-       "2            M.Ram  104  scientist  80000.0  04914287275\n",
-       "3        Ram Kumar  104  scientist  60000.0  04914287335\n",
-       "4  Mohan Babu K.K.  106    officer  50000.0  04962387278\n",
-       "5          K.Gopal  107  scientist  50000.0  04932287278\n",
-       "6      Anil Raj M.  108   engineer  50000.0  04962287278\n",
-       "7         Amala P.  201  scientist  70000.0  04989287275\n",
-       "8             Uma   204    officer  60000.0  04914287335\n",
-       "9             Suma  206   engineer  50000.0  04962387278"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             ename  eno     edesig  esalary        ephno\n",
+      "0            K.Raj  101  scientist  50000.0  04932287278\n",
+      "1     Mohan Raj M.  102   engineer  50000.0  04962287278\n",
+      "2            M.Ram  104  scientist  80000.0  04914287275\n",
+      "3        Ram Kumar  104  scientist  60000.0  04914287335\n",
+      "4  Mohan Babu K.K.  106    officer  50000.0  04962387278\n",
+      "5          K.Gopal  107  scientist  50000.0  04932287278\n",
+      "6      Anil Raj M.  108   engineer  50000.0  04962287278\n",
+      "7         Amala P.  201  scientist  70000.0  04989287275\n",
+      "8             Uma   204    officer  60000.0  04914287335\n",
+      "9             Suma  206   engineer  50000.0  04962387278\n"
+     ]
     }
    ],
    "source": [
@@ -303,8 +189,9 @@
     "    return re.sub('[^0-9]','',str(n))\n",
     "\n",
     "dfe['ephno'] = dfe['ephno'].apply(fn_rm_nd)\n",
+    "print dfe\n",
     "\n",
-    "dfe"
+    "dfe.to_excel('emp.xlsx',index=False)"
    ]
   },
   {
