--- a/ML/assignments/Day6 More Assignment.ipynb
+++ b/ML/assignments/Day6 More Assignment.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,13 +227,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "Index([u'age', u'job', u'marital', u'education', u'default', u'housing',\n",
+       "       u'loan', u'contact', u'month', u'day_of_week', u'duration', u'campaign',\n",
+       "       u'pdays', u'previous', u'poutcome', u'emp_var_rate', u'cons_price_idx',\n",
+       "       u'cons_conf_idx', u'euribor3m', u'nr_employed', u'y'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bank.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2) The data (bikerentals.txt) is related to a bike rental company.\n",
+    "Develop a suitable ML model for predicting the number of bikes\n",
+    "rented (The last column of the data) daily.\n",
+    "(Source of data: https://github.com/mhyhre/mlcourse_open/blob/master/data/bikes_rent.csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season</th>\n",
+       "      <th>yr</th>\n",
+       "      <th>mnth</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weathersit</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>hum</th>\n",
+       "      <th>windspeed(mph)</th>\n",
+       "      <th>windspeed(ms)</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14.110847</td>\n",
+       "      <td>18.18125</td>\n",
+       "      <td>80.5833</td>\n",
+       "      <td>10.749882</td>\n",
+       "      <td>4.805490</td>\n",
+       "      <td>985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14.902598</td>\n",
+       "      <td>17.68695</td>\n",
+       "      <td>69.6087</td>\n",
+       "      <td>16.652113</td>\n",
+       "      <td>7.443949</td>\n",
+       "      <td>801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.050924</td>\n",
+       "      <td>9.47025</td>\n",
+       "      <td>43.7273</td>\n",
+       "      <td>16.636703</td>\n",
+       "      <td>7.437060</td>\n",
+       "      <td>1349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.200000</td>\n",
+       "      <td>10.60610</td>\n",
+       "      <td>59.0435</td>\n",
+       "      <td>10.739832</td>\n",
+       "      <td>4.800998</td>\n",
+       "      <td>1562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.305237</td>\n",
+       "      <td>11.46350</td>\n",
+       "      <td>43.6957</td>\n",
+       "      <td>12.522300</td>\n",
+       "      <td>5.597810</td>\n",
+       "      <td>1600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   season  yr  mnth  holiday  weekday  workingday  weathersit       temp  \\\n",
+       "0       1   0     1        0        6           0           2  14.110847   \n",
+       "1       1   0     1        0        0           0           2  14.902598   \n",
+       "2       1   0     1        0        1           1           1   8.050924   \n",
+       "3       1   0     1        0        2           1           1   8.200000   \n",
+       "4       1   0     1        0        3           1           1   9.305237   \n",
+       "\n",
+       "      atemp      hum  windspeed(mph)  windspeed(ms)   cnt  \n",
+       "0  18.18125  80.5833       10.749882       4.805490   985  \n",
+       "1  17.68695  69.6087       16.652113       7.443949   801  \n",
+       "2   9.47025  43.7273       16.636703       7.437060  1349  \n",
+       "3  10.60610  59.0435       10.739832       4.800998  1562  \n",
+       "4  11.46350  43.6957       12.522300       5.597810  1600  "
       ]
      },
      "execution_count": 6,
@@ -242,7 +407,8 @@
     }
    ],
    "source": [
-    "type(bank['default'][0])"
+    "bike_data = pd.read_csv(\"https://raw.githubusercontent.com/mhyhre/mlcourse_open/master/data/bikes_rent.csv\")\n",
+    "bike_data.head()"
    ]
   },
   {
