--- a/RL/RL1/soln_assignment1.ipynb
+++ b/RL/RL1/soln_assignment1.ipynb
@@ -6,7 +6,15 @@
    "source": [
     "## 1. Using the Taxi environment in Open AI , reset the environments and display some states  of your choice.\n",
     "\n",
+    "\n",
     "* https://gym.openai.com/envs/Taxi-v2/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# color maynot display properly : git visualization "
    ]
   },
   {
