--- a/RL/RL2/soln_assignment2.ipynb
+++ b/RL/RL2/soln_assignment2.ipynb
@@ -7,26 +7,25 @@
     "## 1. Using the Taxi environment in Open AI , reset the environment.\n",
     "## 2. Using random moves pickup a passenger and drop the passenger at his desired                   \n",
     "##        location. Find out how many moves had to \n",
-    "## 3. Implement the Q Learning Algorith on the Taxi environment.\n",
-    "## 4. Render any  3 environments in OpenAi gym.\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State 149\n",
+      "State 361\n",
       "+---------+\n",
-      "|R: | : :\u001b[35mG\u001b[0m|\n",
-      "| : :\u001b[43m \u001b[0m: : |\n",
+      "|\u001b[34;1mR\u001b[0m: | : :\u001b[35mG\u001b[0m|\n",
       "| : : : : |\n",
-      "| | : | : |\n",
-      "|\u001b[34;1mY\u001b[0m| : |B: |\n",
+      "| : : : : |\n",
+      "| | : |\u001b[43m \u001b[0m: |\n",
+      "|Y| : |B: |\n",
       "+---------+\n",
       "\n"
      ]
@@ -42,13 +41,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|R: | : :\u001b[35m\u001b[42mG\u001b[0m\u001b[0m|\n",
+      "| : : : : |\n",
+      "| : : : : |\n",
+      "| | : | : |\n",
+      "|Y| : |B: |\n",
+      "+---------+\n",
+      "  (Dropoff)\n",
+      "total moves required : 1775\n"
+     ]
+    }
+   ],
    "source": [
     "reward = 0\n",
     "count = 0\n",
-    "while()"
+    "while( reward != 20):\n",
+    "    action = env.action_space.sample()\n",
+    "    s,reward,done,info = env.step(action)\n",
+    "    count +=1\n",
+    "    \n",
+    "env.render()\n",
+    "print \"total moves required :\",count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Implement the Q Learning Algorith on the Taxi environment.\n",
+    "## 4. Render any  3 environments in OpenAi gym."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print env.observation_space.n, env.action_space.n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.]\n",
+      " ..., \n",
+      " [ 0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#initialize q matrix = 0\n",
+    "Q = np.zeros((env.observation_space.n, env.action_space.n))\n",
+    "print Q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  * Q(state, action) = R(state, action) + Gamma * Max[Q(next state, all actions)]"
    ]
   },
   {
@@ -56,7 +135,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env.reset()\n",
+    "\n",
+    "gamma = 0.8 \n",
+    "episodes = 1000\n",
+    "\n",
+    "for ep in range(episodes):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
