--- a/NLP/NLP3/soln_assignment4.ipynb
+++ b/NLP/NLP3/soln_assignment4.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
     "if(test_discription_folder_status(cat_des,PATH)):\n",
     "    classes = cat_des.keys()\n",
     "    for clname in classes:\n",
-    "        count = 0\n",
+    "        count = 3\n",
     "        train_data = get_class_data(count,clname,os.path.join(PATH,clname))\n",
     "        model.update(train_data)\n",
     "else :\n",
@@ -247,9 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<NaiveBayesClassifier trained on 30 instances>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
