--- a/NLP/NLP3/soln_assignment4.ipynb
+++ b/NLP/NLP3/soln_assignment4.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,12 +193,13 @@
     "        content = fp.read().replace('\\n','')\n",
     "        datalist.append((content,clname))\n",
     "        fp.close()\n",
+    "    print \"  files read :\",count,\"\\n\"    \n",
     "    return datalist "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
        "['C10', 'C08', 'C09', 'C01', 'C02', 'C03', 'C04', 'C05', 'C06', 'C07']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,14 +219,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_discription_folder_status : Test Passed\n"
+      "test_discription_folder_status : Test Passed\n",
+      "---- C10 ---total:  10 \n",
+      "\n",
+      "  files read : 70\n",
+      "---- C08 ---total:  10 \n",
+      "\n",
+      "  files read : 70\n",
+      "---- C09 ---total:  10 \n",
+      "\n",
+      "  files read : 70\n",
+      "---- C01 ---total:  10 \n",
+      "\n",
+      "  files read : 70\n",
+      "---- C02 ---total:  10 \n",
+      "\n",
+      "  files read : 70\n",
+      "---- C03 ---total:  10 \n",
+      "\n",
+      "  files read : 65\n",
+      "---- C04 ---total:  10 \n",
+      "\n",
+      "  files read : 70\n",
+      "---- C05 ---total:  10 \n",
+      "\n",
+      "  files read : 70\n",
+      "---- C06 ---total:  10 \n",
+      "\n",
+      "  files read : 70\n",
+      "---- C07 ---total:  10 \n",
+      "\n",
+      "  files read : 70\n",
+      "----completed!!-----\n"
      ]
     }
    ],
@@ -236,10 +268,13 @@
     "\n",
     "if(test_discription_folder_status(cat_des,PATH)):\n",
     "    classes = cat_des.keys()\n",
+    "    tot_cls = len(classes)\n",
     "    for clname in classes:\n",
-    "        count = 3\n",
+    "        count = 70\n",
+    "        print \"----\",clname,\"---total: \",tot_cls\n",
     "        train_data = get_class_data(count,clname,os.path.join(PATH,clname))\n",
     "        model.update(train_data)\n",
+    "    print \"----completed!!-----\"   \n",
     "else :\n",
     "    print \"Error !! insufficient documents\"\n",
     " "
@@ -247,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<NaiveBayesClassifier trained on 30 instances>"
+       "<NaiveBayesClassifier trained on 695 instances>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
